added heated centrifuge